fix scrollbar

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,7 +3,7 @@
 /* LOGO */
 
 header.topbar {
-  width: 100%;
+  width: 100vw;
   height: 65px;
   background-color: #fff;
   display: block;
@@ -93,8 +93,7 @@ header ul.menu li:nth-child(2) a::before {
   top: 0px;
 }
 
-header ul.menu li a.active::before,
-header ul.menu li a.active div::before {
+header ul.menu li a.active::before, header ul.menu li a.active div::before {
   background-image: -webkit-linear-gradient(28deg, #f70016 7%, #5f00a4 100%);
   background-image: -o-linear-gradient(28deg, #f70016 7%, #5f00a4 100%);
   background-image: linear-gradient(to left, #f70016 7%, #5f00a4 100%);
@@ -600,8 +599,7 @@ header .mobile-toggle ul li {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-header .mobile-toggle ul li span,
-header .mobile-toggle ul li a {
+header .mobile-toggle ul li span, header .mobile-toggle ul li a {
   width: 100%;
   height: 100%;
   display: inline-block;
@@ -638,8 +636,7 @@ header .mobile-toggle ul li:last-child {
     margin-right: 0;
     cursor: pointer;
   }
-  header .mobile-toggle,
-  header .mobile-menu {
+  header .mobile-toggle, header .mobile-menu {
     display: none;
     visibility: hidden;
     z-index: 1;
@@ -655,8 +652,7 @@ header .mobile-toggle ul li:last-child {
   header .toggleNotifications .notification {
     right: 0px !important;
   }
-  header .toggle .invite-member,
-  header .toggle .notification {
+  header .toggle .invite-member, header .toggle .notification {
     width: 310px;
     right: 71px;
   }
@@ -691,8 +687,7 @@ header .mobile-toggle ul li:last-child {
   header .function .user span.avatar {
     margin-right: 10px;
   }
-  header .toggle .invite-member,
-  header .toggle .notification {
+  header .toggle .invite-member, header .toggle .notification {
     right: 134px;
   }
   header .toggle .dropdown {
